ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
          - path: /otusapp/alisher
            pathType: Prefix
            backend:
               service:
                 name: api-service
                 port:
                   number: 8000
